Fix spacing jump when marking videos watched

--- a/sass/includes/video-list-item.sass
+++ b/sass/includes/video-list-item.sass
@@ -79,7 +79,7 @@
 
     @at-root .video-list-item--watched#{&}
       padding: 8px 8px 0px
-      margin: -8px -8px 12px
+      margin: -8px -8px 20px
 
       .thumbnail
         margin-bottom: 8px
